Batch/feature/issue/46 : 배치 애플리케이션을 통한 입법 프로세스 추적 (#47)
* add : TodayBillInfoResult 필터링 메서드 추가
- [접수] 법안들만 필터링
- [대안] 법안들만 필터링
- [접수] 법안 + [발의자가 20명 미만] 법안들 필터링

* add : 접수 + 20명 미만 발의 법안 구분 key 추가

* refactor : job parameter 를 통해 batch date 가져오도록 변경

* refactor : BillProposerReader STEP 에서 공유받을 데이터 구성

* refactor : 접수 법안, 대안 법안 따로 save 하도록 리팩토링

* refactor : BillProposerReader STEP 에서 사용할 공유데이터 사용하도록 변경

* refactor : StepExecutionContextSharingListener -> BillProposerReaderStepExecutionContextSharingListener 사용하도록 변경

* add : 본회의처리결과 코드 추가 - 임기만료폐기

* add : 위원장 필드 추가

* add : ProgressStatus 필드 추가

* refactor : 단일 topic 에 대한 request 에서 다양한 topic 에 대한 request 로 리팩토링

* fix : inner enum class 의 RECEIPT 값 변경

* refactor : topic 별 representation bill name, total count 할당 메서드로 리팩토링

* refactor : 단일 topic 조회에서 여러개 topic 조회로 변경

* refactor : topic 별 알림용 법안 정보(billId, billName) 구성하도록 리팩토링

* refactor : writeBillProposerStep 의 name 수정

* refactor : 접수 법안 여부 확인 메서드, 대안 법안 여부 확인 메서드, 20인 미만 법안 여부 확인 메서드 추가

* fix : NotificationTopic value 를 통해 찾도록 수정

* refactor : 공통 response 형식 객체 패키지 이동

* add : 소관위원회 정보 조회 추가

* fix : operation 명 오류 수정

* chore : 객체 명 수정

* style : 가독성 증진을 위한 item 객체 inner class(record)로 변경

* build : core:core-domain 의존성 compile-only 추가

* refactor : notification 모듈의 topic 타입을 String 에서 core-domain 모듈에 있는 enum 타입으로 변경

* refactor : notification 모듈의 topic 타입 변경에 따른 변경

* add : '기타' 값 추가 확인에 따른 ETC 타입 추가

* refactor : deviceOs 확인 메서드 추가

* add : 소관위접수 상태 확인 메서드 추가

* add : 값으로 LegislationType 찾기 메서드 추가

* add : 알림 주제 생성 및 그룹화를 위한 메서드 추가

* build : batch 용 storage 구분 사용을 위한 persistence-api, data-jpa 의존성 compile-only 로 추가

* refactor : component-scan 위치 BatchCoreConfig 로 옮김

* fix : 새로운 proposers 상태(ex:중앙선거관리위원회 위원후보자(김대웅) 인사청문요청안(대법원장)) 발견에 따른 proposers 내부 숫자 비교 메서드 수정

* refactor : NotificationTopic 으로 알림 request 매핑하도록 리팩토링

* feature : 법안 상태 추적을 위한 통신 클라이언트

* feature : 상태가 업데이트된 법안들을 job 실행 중 임시 저장해두기 위한 컴포넌트

* feature : 현재 법안 정보 조회 결과 매핑 객체

* feature : 